# RealsenseBodyPose

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  MODEL_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  PREREQUISITES.md  QUICKSTART.md  README.md  pour-ROS2.md  pour-info.md  pour-moi.md  test_opencv_gpu.cpp  test_udp_receiver.py
models/: README.md  build_tensorrt_engine.py  check_engine.py  export_to_onnx.py
my_test_bag/: metadata.yaml  my_test_bag_0.db3
ros2_bridge/: csv_to_rosbag.py  human_bridge_node.py
src/: DataRecorder.cpp  DataRecorder.h  PoseEstimator.cpp  PoseEstimator.h  RealSenseCamera.cpp  RealSenseCamera.h  SkeletonProjector.cpp  SkeletonProjector.h  UdpSender.cpp  UdpSender.h  Utils.h  Visualizer.cpp  Visualizer.h  main.cpp
